# grayguava-desktop

./: package.json
.github/workflows/: windows.yml
src/: index.html  offline.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app-assets/css/: styles.css
src/assets/css/: nav.css  offline.css
